--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -44,22 +44,22 @@
 				</select>
 			</form>
 			
-			<div ng-show="contatoForm.nome.$dirty" ng-messages="contatoForm.nome.$error" class="alert alert-danger">
-			<div ng-message="required">
-				Por favor, preencha o campo nome!
-			</div>
-			<div ng-message="minlength">
-				O campo nome deve ter no mínimo 10 caracteres!
-			</div>
+			<div ng-show="contatoForm.nome.$dirty && contatoForm.nome.$invalid" ng-messages="contatoForm.nome.$error" class="alert alert-danger">
+				<div ng-message="required">
+					Por favor, preencha o campo nome!
+				</div>
+				<div ng-message="minlength">
+					O campo nome deve ter no mínimo 10 caracteres!
+				</div>
 			</div>
 			
-			<div ng-show="contatoForm.telefone.$dirty" ng-messages="contatoForm.telefone.$error" class="alert alert-danger" >
-			<div ng-message="required" >
-				Por favor, preencher o campo telefone!
-			</div>
-			<div ng-message="pattern">
-				O campo telefone deve ter o formato DDDD-DDDD
-			</div>
+			<div ng-show="contatoForm.telefone.$dirty && contatoForm.nome.$invalid" ng-messages="contatoForm.telefone.$error" class="alert alert-danger" >
+				<div ng-message="required" >
+					Por favor, preencher o campo telefone!
+				</div>
+				<div ng-message="pattern">
+					O campo telefone deve ter o formato DDDD-DDDD
+				</div>
 			</div>
 			
 			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
