--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -14,6 +14,8 @@
 		<script src="js/services/serialGeneratorService.js"></script>
 		<script src="js/config/serialGeneratorConfig.js"></script>
 		<script src="js/value/configValue.js"></script>
+		<script src="js/filters/nameFilter.js"></script>
+		<script src="js/filters/elipsisFilter.js"></script>
 	</head>	
 	<body ng-controller="listaTelefonicaController">
 		<div class="jumbotron">
@@ -35,7 +37,7 @@
 					</td> -->
 					<td>{{contato.serial}}</td>
 					<td><input type="checkbox" ng-model="contato.selecionado"/></td>
-					<td>{{contato.nome}}</td>
+					<td>{{contato.nome | name | elipsis:10}}</td>
 					<td>{{contato.telefone}}</td>
 					<td>{{contato.operadora.nome | lowercase}}</td>
 					<td>{{contato.data | date:'EEEE dd/MM/yyyy HH:mm'}}</td>
