--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -4,6 +4,7 @@
 		<title>Lista Telefonica</title>
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
+		<link rel="stylesheet" type="text/css" href="css/ui.css">
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular/angular-locale_pt-br.js"></script>
 		<script src="lib/angular/angular-messages.js"></script>
@@ -16,10 +17,16 @@
 		<script src="js/value/configValue.js"></script>
 		<script src="js/filters/nameFilter.js"></script>
 		<script src="js/filters/elipsisFilter.js"></script>
+		<script src="js/directive/uiAlertDirective.js"></script>
 	</head>	
 	<body ng-controller="listaTelefonicaController">
 		<div class="jumbotron">
 			<h3>{{app}}</h3>
+
+			<ui-alert title="Ops, aconteceu um problema!">
+				Não foi possível carregar os dados
+			</ui-alert>
+
 			<input  class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?"/>
 			<table ng-show="contatos.length > 0" class="table">
 				<tr>
