--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -9,6 +9,7 @@
 		<script src="lib/angular/angular-locale_pt-br.js"></script>
 		<script src="lib/angular/angular-messages.js"></script>
 		<script src="lib/serialGenerator/serialGenerator.js"></script>
+		<script src="lib/ui/ui.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers/listaTelefonicaController.js"></script>
 		<script src="js/services/contatosAPIService.js"></script>
@@ -19,7 +20,6 @@
 		<script src="js/filters/elipsisFilter.js"></script>
 		<script src="js/directive/uiAlertDirective.js"></script>
 		<script src="js/directive/uiDateDirective.js"></script>
-		<script src="js/directive/uiAccordionDirective.js"></script>
 	</head>	
 	<body ng-controller="listaTelefonicaController">
 		<div class="jumbotron">
