--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -1,4 +1,4 @@
- <html ng-app="listaTelefonica"> 
+<html ng-app="listaTelefonica"> 
 	<head>
 		<meta charset="UTF-8">
 		<title>Lista Telefonica</title>
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link rel="stylesheet" type="text/css" href="css/ui.css">
 		<script src="lib/angular/angular.js"></script>
+		<script src="lib/angular/angular-route.js"></script>
 		<script src="lib/angular/angular-locale_pt-br.js"></script>
 		<script src="lib/angular/angular-messages.js"></script>
 		<script src="lib/serialGenerator/serialGenerator.js"></script>
@@ -15,102 +16,15 @@
 		<script src="js/services/contatosAPIService.js"></script>
 		<script src="js/services/operadorasAPIService.js"></script>
 		<script src="js/services/serialGeneratorService.js"></script>
+		<script src="js/config/routeConfig.js"></script>
 		<script src="js/value/configValue.js"></script>
 		<script src="js/filters/nameFilter.js"></script>
 		<script src="js/filters/elipsisFilter.js"></script>
 		<script src="js/directive/uiAlertDirective.js"></script>
 		<script src="js/directive/uiDateDirective.js"></script>
 	</head>	
-	<body ng-controller="listaTelefonicaController">
-		<div class="jumbotron">
-			<h3>{{app}}</h3>
-
-			
-			<ui-alert ng-show="error" title="Ops, aconteceu um problema!">
-				{{error}}
-			</ui-alert>
-
-			<ui-accordions>	
-				<ui-accordion title="Accordion 1">
-					teste de accordion 1
-				</ui-accordion>
-				
-				<ui-accordion title="Accordion 2">
-					teste de accordion 2
-				</ui-accordion>
-			</ui-accordions>		
-			
-			<input  class="form-control" type="text" ng-model="criterioDeBusca" placeholder="O que você está buscando?"/>
-			<table ng-show="contatos.length > 0" class="table">
-				<tr>
-					<th></th>
-					<th>Serial</th>
-					<th><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
-					<th><a href="" ng-click="ordenarPor('telefone')">Telefone</a></th>
-					<th>Operadora</th>
-					<th>Data</th>
-				</tr>	
-				<tr ng-class="{selecionado:contato.selecionado}" ng-repeat="contato in contatos | filter:criterioDeBusca | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
-					<!-- key = nome, value = valor do telefone  deu certo com dois valores no array -->
-				<!--	<td ng-repeat="(key,value) in contato">
-						{{value}}
-					</td> -->
-					<td><input type="checkbox" ng-model="contato.selecionado"/></td>
-					<td>{{contato.serial}}</td>
-					<td>{{contato.nome | name | elipsis:10}}</td>
-					<td>{{contato.telefone}}</td>
-					<td>{{contato.operadora.nome | lowercase}}</td>
-					<td>{{contato.data | date:'EEEE dd/MM/yyyy HH:mm'}}</td>
-					<td><div style="width: 20px; height: 20px;" ng-style="{'background-color':contato.cor}"></div></td>
-				</tr>	
-			</table>
-			<hr/>
-			<form name="contatoForm">
-				<input class="form-control" type="text" ng-model="contato.nome" placeholder="Nome" name="nome" ng-required="true" ng-minlength="10"/>
-				<input class="form-control" type="text" ng-model="contato.telefone" placeholder="Telefone" name="telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/"/>
-				<input class="form-control" type="text" ng-model="contato.data" placeholder="Data" name="data" ng-required="true" ng-minlength="10" ui-date>
-				<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria + '(' + (operadora.preco | currency) + ')' for operadora in operadoras | orderBy:'nome'">	
-					<option value="">Selecione uma operadora</option>
-				</select>
-			</form>
-			
-			<div ng-show="contatoForm.nome.$dirty && contatoForm.nome.$invalid" ng-messages="contatoForm.nome.$error" class="alert alert-danger">
-				<div ng-message="required">
-					Por favor, preencha o campo nome!
-				</div>
-				<div ng-message="minlength">
-					O campo nome deve ter no mínimo 10 caracteres!
-				</div>
-			</div>
-			
-			<div ng-show="contatoForm.telefone.$dirty && contatoForm.nome.$invalid" ng-messages="contatoForm.telefone.$error" class="alert alert-danger">
-				<div ng-message="required" >
-					Por favor, preencher o campo telefone!
-				</div>
-				<div ng-message="pattern">
-					O campo telefone deve ter o formato DDDD-DDDD
-				</div>
-			</div>
-			
-			<div ng-show="contatoForm.data.$dirty && contatoForm.data.$invalid" ng-messages="contatoForm.data.$error" class="alert alert-danger">
-				<div ng-message="require">
-					Por favor, preencher o campo data
-				</div>
-				<div ng-message="minlength">
-					O campo data tem que conter dia, mês e ano
-				</div>	
-			</div>	
-
-			<button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="contatoForm.$invalid">Adicionar Contato</button>
-			<!-- Exemplo validando os campos obrigatorios pelo botão -->
-			<!-- <button class="btn btn-primary btn-block" ng-click="adicionarContato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button> -->
-			<!-- Exemplo com o botão aparecendo na tela e abilitado com algum contato selecionado-->
-			<!-- <button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-disabled="!isContatoSelecionado(contatos)">Apagar Contatos</button> -->
-			<!-- Exemplo com ele escondido e aparecendo ao selecionar algum contato ng-show -->
-			<!-- <button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-show="isContatoSelecionado(contatos)">Apagar Contatos</button> -->
-			<!-- Exemplo com o botão sendo carregado, apenas se houver necessidade, para não sobrecarregar memoria  ng-if -->
-			<button class="btn btn-danger btn-block" ng-click="apagarContatos(contatos)" ng-if="isContatoSelecionado(contatos)">Apagar Contatos</button>
-		</div>
+	<body>
+		<div ng-view></div>
 		<div ng-include="'view/footer.html'"></div>
 	</body>
 </html> 
