--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link rel="stylesheet" type="text/css" href="css/ui.css">
+		<link rel="stylesheet" type="text/css" href="css/detalhes.css">
 		<script src="lib/angular/angular.js"></script>
 		<script src="lib/angular/angular-route.js"></script>
 		<script src="lib/angular/angular-locale_pt-br.js"></script>
