--- a/ListaTelefonica.html
+++ b/ListaTelefonica.html
@@ -23,9 +23,18 @@
 		<script src="js/value/configValue.js"></script>
 		<script src="js/filters/nameFilter.js"></script>
 		<script src="js/filters/elipsisFilter.js"></script>
+		<script src="js/interceptors/timestampInterceptor.js"></script>
+		<script src="js/interceptors/errorInterceptor.js"></script>
+		<script src="js/interceptors/loadingInterceptor.js"></script>
+		<script src="js/config/interceptorsConfig.js"></script>
 	</head>	
 	<body>
-		<div ng-view></div>
-		<div ng-include="'view/footer.html'"></div>
+		<div class="jumbotron" ng-show="loading">
+			<h5>Carregando, por favor aguarde...</h5>
+		</div>	
+		<div ng-hide="loading">
+			<div ng-view></div>
+			<div ng-include="'view/footer.html'"></div>
+		</div>	
 	</body>
 </html> 
